# Sentinel-Data-Generator

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  README.md  pyproject.toml  refresh-demo-ioc.ps1  requirements-dev.txt  requirements.txt  sentinel_analysis.job.yaml
.github/: SKILL.md  copilot-instructions.md
.github/workflows/: generate-data.yml
brute-force-demo/: README.md
brute-force-demo/api/: function_app.py  host.json  local.settings.json.example  requirements.txt
brute-force-demo/frontend/: index.html  script.js  style.css
brute-force-demo/infra/: main.bicep  main.bicepparam  reset-demo-table.ps1  toggle-public-access.ps1
config/: config.example.yaml
demo-scripts/: README.md  defender-alert-simulation.ps1
infra/: analytic-rules.json  deploy.ps1  deploy.sh  main.bicep  main.bicepparam  workbook.json
notebooks/: 01_signinlogs_summary_and_stats-daily.ipynb  sentinel_analysis.ipynb  sentinel_analysis.job.yaml
sentinel_data_generator/: __init__.py  __main__.py
sentinel_data_generator/core/: __init__.py  config.py  engine.py
sentinel_data_generator/generators/: __init__.py  aws_cloudtrail.py  base.py  common_security_log.py  defender_office.py  gcp_audit_logs.py  purview_dlp.py  security_event.py  signin_logs.py  syslog.py
sentinel_data_generator/models/: __init__.py  schemas.py
sentinel_data_generator/outputs/: __init__.py  base.py  file.py  log_analytics.py  stdout.py
sentinel_data_generator/utils/: __init__.py  exceptions.py
tests/: __init__.py  test_base_generator.py  test_cli.py  test_exceptions.py  test_schemas.py
